@@ -7,6 +7,8 @@ Revision history for Perl extension Statistics::R.
     - Tests expecting a specific output
     - The run() method now accepts an array of strings as input
     - New run_from_file() method to read and execute commands from an R file
+    - Updated error handling mechanism that detects R syntax errors in addition
+      to R runtime errors
 
 0.21  2011-09-04
     - Tweaked the regular expressions that parse the R output stream for added
